--- a/html-plain.cfg
+++ b/html-plain.cfg
@@ -1,5 +1,12 @@
 \Preamble{xhtml}  
 
+\RequirePackage{ifthen}
+
+\ifthenelse{\isundefined{\foobar}}{}{
+  \renewcommand{\citeurl}[5]{\HCode{<a href="#5" title="#2, #3">}#1\HCode{</a>}}
+}
+
+
 % \renewcommand{\code}[1]{\lstinline!#1!}
 % \renewcommand{\java}[1]{\code{#1}}
 % \renewcommand{\py}[1]{\code{#1}}
@@ -16,7 +23,7 @@
 \renewcommand{\textbf}[1]{\HCode{<strong>}#1\HCode{</strong>}}
 \renewcommand{\emph}[1]{\HCode{<em>}#1\HCode{</em>}}
 \renewcommand{\texttt}[1]{\HCode{<code>}#1\HCode{</code>}}
-\renewcommand{\citeurl}[5]{\HCode{<a href="#5" title="#2, #3">}#1\HCode{</a>}}
+
 
 \Configure{()}{\HCode{<span class="math">}}{\HCode{</span>}}
 % \Configure{footnote}{\HCode{<span>FOT1}}{\HCode{FOT2</span>}}
