--- a/html-plain.cfg
+++ b/html-plain.cfg
@@ -2,10 +2,9 @@
 
 \RequirePackage{ifthen}
 
-\ifthenelse{\isundefined{\foobar}}{}{
+\ifthenelse{\isundefined{\citeurl}}{}{
   \renewcommand{\citeurl}[5]{\HCode{<a href="#5" title="#2, #3">}#1\HCode{</a>}}
 }
-
 
 % \renewcommand{\code}[1]{\lstinline!#1!}
 % \renewcommand{\java}[1]{\code{#1}}
