Added empty footnote definition
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/html-plain.cfg
+++ b/html-plain.cfg
@@ -26,6 +26,7 @@
 
 \Configure{()}{\HCode{<span class="math">}}{\HCode{</span>}}
 % \Configure{footnote}{\HCode{<span>FOT1}}{\HCode{FOT2</span>}}
+\Configure{footnote}{}{}{}{}
 \Configure{footnotetext}{\HCode{<span class="sidenote">}}{}{\HCode{</span>}}
 \Configure{footnotemark}{}{}
 % \Configure{lstinline}{\HCode{<code>}\NoFonts}{\EndNoFonts\HCode{</code>}}
