Handle listings in a first step
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/html-plain.cfg
+++ b/html-plain.cfg
@@ -29,13 +29,37 @@
 \Configure{footnote}{}{}{}{}
 \Configure{footnotetext}{\HCode{<span class="sidenote">}}{}{\HCode{</span>}}
 \Configure{footnotemark}{}{}
-% \Configure{lstinline}{\HCode{<code>}\NoFonts}{\EndNoFonts\HCode{</code>}}
+
+
 \Configure{section}{\HCode{<section>}}{\HCode{</section>}}{\HCode{<h2>}\arabic{section}\HCode{ &nbsp; }}{\HCode{</h2>}}
 \Configure{subsection}{}{}{\HCode{<h3>}\arabic{section}.\arabic{subsection}\HCode{ &nbsp; }}{\HCode{</h3>}}
 \Configure{HtmlPar}{\HCode{<p>}}{\EndP\HCode{<p>}}{\HCode{</p>}}{\HCode{</p>}}
 \Configure{caption}{\HCode{<figcaption><span class="fignum">}}{:\HCode{</span>} }{}{\HCode{</figcaption>}}
 \ConfigureEnv{figure}{\EndP\HCode{<figure>}}{\HCode{</figure>}}{}{}
 \Configure{float}{}{}{}{}
+
+
+\ifthenelse{\isundefined{\lstinline}}{}{
+  % else
+\Configure{lstinline}{\HCode{<code>}}{\HCode{</code>}}
+\ConfigureEnv{lstlisting}
+   {\ifvmode \IgnorePar\fi \EndP
+    \gHAdvance\listingN by 1
+    \gdef\start:LstLn{%
+       \HCode{<figure><div><div class="linenumbers"></div><pre><code>}%
+       \gdef\start:LstLn{\leavevmode\special{t4ht@+\string&{35}x000A{59}}x}}%%% this special string thing inserts an HTML entity for a newline... didn't find another way
+    \bgroup
+       \Configure{listings}
+         {{\everypar{}\leavevmode}}
+         {{\everypar{}\leavevmode}}
+         {\start:LstLn }
+         {}%
+   }
+   {\egroup
+    \ifvmode \IgnorePar\fi \EndP \HCode{</code></pre></div></figure>}\par}
+   {} {}
+   % done configuring listing
+}
 
 \begin{document}
 
