Redefine \input in knitrout, it's most likely tikz files, which we want to include as SVG or something anyway
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/html-plain.cfg
+++ b/html-plain.cfg
@@ -38,6 +38,13 @@
 \ConfigureEnv{figure}{\EndP\HCode{<figure>}}{\HCode{</figure>}}{}{}
 \Configure{float}{}{}{}{}
 
+\makeatletter
+\ifthenelse{\isundefined{\knitrForHt}}{}{  % this is brittle, but oh well
+  \renewenvironment{knitrout}{
+    \renewcommand{\@iinput}[1]{TODO: convert to image: {##1}}%
+  }{}
+}
+\makeatother
 
 \ifthenelse{\isundefined{\lstinline}}{}{
   % else
