add snippet from SO that adds PDF->PNG support

--- a/html-plain.cfg
+++ b/html-plain.cfg
@@ -1,4 +1,4 @@
-\Preamble{xhtml}  
+\Preamble{xhtml}
 
 \RequirePackage{ifthen}
 
@@ -68,6 +68,19 @@
    % done configuring listing
 }
 
+% Adds PDF to PNG conversion support
+% code from: http://tex.stackexchange.com/questions/46156/pdf-image-files-and-htlatex
+\Preamble{xhtml}
+  \Configure{graphics*}
+         {pdf}
+         {\Needs{"convert \csname Gin@base\endcsname.pdf
+                               \csname Gin@base\endcsname.png"}%
+          \Picture[pict]{\csname Gin@base\endcsname.png}%
+          \special{t4ht+@File: \csname Gin@base\endcsname.png}
+         }
+\begin{document}
+\EndPreamble
+
 \begin{document}
 
-\EndPreamble  
+\EndPreamble
