The combination of libertine and fontenc packages break rendering of \textbackslash{}
This works around the issue, by redefining the macro in html-plain.cfg, and then replacing the placeholder during post-processing.

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/html-plain.cfg
+++ b/html-plain.cfg
@@ -1,4 +1,4 @@
-\Preamble{xhtml}  
+\Preamble{xhtml}
 
 \RequirePackage{ifthen}
 
@@ -22,7 +22,7 @@
 \renewcommand{\textbf}[1]{\HCode{<strong>}#1\HCode{</strong>}}
 \renewcommand{\emph}[1]{\HCode{<em>}#1\HCode{</em>}}
 \renewcommand{\texttt}[1]{\HCode{<code>}#1\HCode{</code>}}
-
+\renewcommand{\textbackslash}{\HCode{!!TEXTBACKSLASH!!}}
 
 \Configure{()}{\HCode{<span class="math">}}{\HCode{</span>}}
 % \Configure{footnote}{\HCode{<span>FOT1}}{\HCode{FOT2</span>}}
@@ -70,4 +70,4 @@
 
 \begin{document}
 
-\EndPreamble  
+\EndPreamble
